<resources>
    <string name="app_name">Data Reader</string>

    <string name="Code128">Up to 80 ASCII characters from 0x20 to 0x7E (example: Abc 123)</string>
    <string name="Code39">Up to 43 characters containing only A-Z,1-9,-,.,space,$,/,+,%,* (example: ABC 1)</string>
    <string name="Codabar">Up to 1K characters containing only 1234567890-$:/.+. Should starts and finishes with one of A,B,C or D (example: A123$B)</string>
    <string name="UPC_A">11 or 12 digits(example: 123456789012)</string>
    <string name="AztecCode">Up to 1K UTF-8 or ISO 8859-1 characters (example: Abc 123)</string>
    <string name="QRCode">Up to 1K UTF-8 characters (example: Abc 123)</string>
    <string name="DataMatrix">Up to 1K ASCII characters (example: Abc 123)</string>
    <string name="EAN_8">8 digits (example: 12345678)</string>
    <string name="EAN_13">13 digits (example: 123456789012)</string>
    <string name="ITF">Up to 40digits pairs (example: 1234)</string>
    <string name="PDF417">Up to 1K ASCII characters (example: Abc123)</string>

    <string name="barcodeNotGenerated">Can not generate barcode</string>

    <string name="barcodeReaderText">Barcode Reader</string>
    <string name="barcodeGeneratorText">Barcode Generator</string>
    <string name="nfcText">NFC</string>
    <string name="ocrText">OCR</string>

    <string name="nfcDesc">Please tap your NFC tag/chip to phone,\nto see what it stores... </string>
    <string name="msgText">Message</string>
    <string name="nfcNotSupportedText">NFC is not supported in your device.</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  Grant permission to proceed</string>
    <string name="name">Name</string>
    <string name="title_activity_ww">ww</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="listTitle">History</string>
    <string name="scannedText">Scanned</string>
    <string name="generatedText">Generated</string>
    <string name="alert_success">Success</string>
    <string name="alert_stop">Stop</string>
    <string name="alert">Alert</string>
    <string name="alert_ok">OK</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="description">Description :&#160;</string>
    <string name="data">Data : &#160;</string>
    <string name="type">Type : &#160;</string>
    <string name="name11">Name : &#160;</string>
    <string name="no_data_available">No Data Available</string>
    <string name="cancle">Cancel</string>
    <string name="message">Message</string>
    <string name="err_storage">Storage Permission denied, grant it to proceed</string>
    <string name="mesage_confirmation_delete_item">Are you sure you want to delete this item?</string>
    <string name="message_data_saved">Data saved successfully.</string>
    <string name="barcode">Barcode</string>
    <string name="admob_app_id">ca-app-pub-2907332364351600~2442037574</string>
    <string name="adsUnitID">ca-app-pub-2907332364351600/4134748411</string>


</resources>
