<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/textColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/back_icon" />

        <TextView
            android:id="@+id/action_bar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/listTitle"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/headerLayout"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/scannedMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/scannedLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/scannedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/scannedText"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/scannedView"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/generatedMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/generatedLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/generatedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/generatedText"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/generatedView"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nfcMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/nfcLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nfcTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/nfcText"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/nfcView"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ocrMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/ocrLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ocrTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:singleLine="true"
                    android:text="@string/ocrText"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/ocrView"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayout"
        android:background="#20000000">

        <TextView
            android:id="@+id/emptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_data_available"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:divider="@color/transparent"
            android:overScrollMode="never"
            android:scrollbars="none" />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>