<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="110dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="7dp"
                android:layout_toLeftOf="@+id/image"
                android:layout_toStartOf="@+id/image"
                android:orientation="vertical">

                <LinearLayout
                    android:visibility="visible"
                    android:id="@+id/nameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/l_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:labelFor="@+id/name"
                        android:text="@string/name11"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="visible"
                    android:id="@+id/typeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/l_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dataLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/l_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/descLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/l_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>


            <ImageView
                android:id="@+id/image"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@color/transparent"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@color/colorBlack"
                android:visibility="visible" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>