<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="7dp"
                    app:contentPadding="0dp">

                    <RelativeLayout
                        android:id="@+id/readerLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@+id/readerText">

                            <ImageView
                                android:layout_width= "50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/reader" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/readerText"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/textColor"
                            android:gravity="center"
                            android:text="@string/barcodeReaderText"
                            android:textColor="@color/colorWhite"
                            android:textSize="14dp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="7dp"
                    app:contentPadding="0dp">

                    <RelativeLayout
                        android:id="@+id/generatorLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@+id/generatorText">

                            <ImageView
                                android:layout_width= "50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/generator" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/generatorText"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/textColor"
                            android:gravity="center"
                            android:text="@string/barcodeGeneratorText"
                            android:textColor="@color/colorWhite"
                            android:textSize="14dp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="7dp"
                    app:contentPadding="0dp">

                    <RelativeLayout
                        android:id="@+id/nfcLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@+id/nfcText">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/nfc" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/nfcText"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/textColor"
                            android:gravity="center"
                            android:text="@string/nfcText"
                            android:textColor="@color/colorWhite"
                            android:textSize="14dp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="7dp"
                    app:contentPadding="0dp">

                    <RelativeLayout
                        android:id="@+id/ocrLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@+id/ocrText">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:background="@drawable/ocr" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/ocrText"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/textColor"
                            android:gravity="center"
                            android:text="@string/ocrText"
                            android:textColor="@color/colorWhite"
                            android:textSize="14dp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/fab_item" />

    </RelativeLayout>

</LinearLayout>